--- a/sections/footer-model-2.liquid
+++ b/sections/footer-model-2.liquid
@@ -66,7 +66,7 @@
                 {% endif %}
                 <div class="footer-desc" style="color:{{ section.settings.desc_color }};">{{ section.settings.footer_desc }}</div>
                 {% if section.settings.social_icons %}
-                <div class="follow-us-outer text-center">
+                <div class="follow-us-outer">
                   <ul class="social-icons">
                     {% if settings.social_facebook_link != blank %}
                     <li>
