--- a/snippets/css-variables.liquid
+++ b/snippets/css-variables.liquid
@@ -128,14 +128,14 @@ color: inherit;
 .tt-homeslider .home-slider .homeslider .slider-content-wrap .slider-title::before {
 position: absolute;
 content: '';
-background-image: url('{{ "slider-leaf.png" | asset_url }}');
+background-image: url('{{ "slider-icon.png" | asset_url }}');
 background-repeat: no-repeat;
 top: 0;
 bottom: auto;
 left: 0;
-right: auto;
+right: 0;
 margin: auto;
-height: 100px;
+height: 96px;
 width: 100px;
 }
 .cmstabbanner::after{
