--- a/snippets/quickveiw-icon.liquid
+++ b/snippets/quickveiw-icon.liquid
@@ -1,7 +1,7 @@
 <div class="quick-view-wrap pro_btn">  
   <a href="javascript:void(0)" data-id="{{ product.handle }}" class="quick-view-text for-home btn">
     <i class="mdi mdi-cached"></i>
-    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100.000000pt" height="71.000000pt" viewBox="0 0 100.000000 71.000000" preserveAspectRatio="xMidYMid meet">
+    <svg xmlns="http://www.w3.org/2000/svg" width="100.000000pt" height="71.000000pt" viewBox="0 0 100.000000 71.000000" preserveAspectRatio="xMidYMid meet">
       <g transform="translate(0.000000,71.000000) scale(0.100000,-0.100000)" stroke="none">
         <path d="M376 694 c-134 -32 -278 -146 -345 -273 l-34 -65 34 -65 c42 -83 144
                  -185 225 -228 154 -82 334 -82 488 0 80 42 182 145 225 226 l34 65 -34 65
