--- a/snippets/site-cookie.liquid
+++ b/snippets/site-cookie.liquid
@@ -19,6 +19,6 @@
   .cookie-block #cookie_message .tt-cookie-inner button::after,
   .cookie-block #cookie_message .tt-cookie-inner button::before,
   .cookie-block #cookie_message .tt-cookie-inner button:focus,
-  .cookie-block #cookie_message .tt-cookie-inner button:active{color:{{settings.btn_txt_hvr_clr}};background-color:{{settings.btn_bg_hvr_clr}};}
+  .cookie-block #cookie_message .tt-cookie-inner button:active{color:{{settings.btn_txt_hvr_clr}};border-bottom-color:{{settings.btn_bg_hvr_clr}};}
 </style>
 <script>var cook="site_cookie";function setcookie(){var e=new Date;e.setMonth(e.getMonth()+12),document.cookie=cook+"="+escape("1")+";path=/;"+(null==e?"":"; expires="+e.toGMTString())}function SE_CheckCookies(){1!=$.cookie(cook)&&(document.getElementById("cookie_message").className+=" se-cookies-message-open")}function closeWdCookie(){$("#cookie_message").slideUp(),setcookie()}document.addEventListener("DOMContentLoaded",function(){SE_CheckCookies()});</script>
