--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -201,29 +201,29 @@
       <p class="visually-hidden" id="cart-live-region-text" aria-live="polite" role="status"></p>
       <p class="visually-hidden" id="shopping-cart-line-item-status" aria-live="polite" aria-hidden="true" role="status">{{ 'general.accessibility.loading' | t }}</p>
     </form>
-  </div>
+  </div>  
 </cart-template>
-<div id="cartEmpty" class="empty-page-content{% if cart != empty %} hide{% endif %} text-center">
-  <div class="cart-bg">
-    <h1 class="cart__title tt-innerpagetitle">{{ 'cart.general.title' | t }}</h1>
-    <div class="cart--cookie-message">
-      <p>{{ 'cart.general.cookies_required' | t }}</p>
+  <div id="cartEmpty" class="empty-page-content{% if cart != empty %} hide{% endif %} text-center">
+    <div class="cart-bg">
+      <h1 class="cart__title tt-innerpagetitle">{{ 'cart.general.title' | t }}</h1>
+      <div class="cart--cookie-message">
+        <p>{{ 'cart.general.cookies_required' | t }}</p>
+      </div>
+      <div class="no-items">
+        <div class="empty-carticon">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 280.028 280.028" width="50" height="50">
+            <path class="c-01" d="M35.004 0h210.02v78.758H35.004V0z" fill="#ed103e"></path>
+            <path class="c-02" d="M262.527 61.256v201.27c0 9.626-7.876 17.502-17.502 17.502H35.004c-9.626 0-17.502-7.876-17.502-17.502V61.256h245.025z" fill="#f63d64"></path>
+            <path class="c-03" d="M35.004 70.007h26.253V26.253L35.004 0v70.007zm183.767-43.754v43.754h26.253V0l-26.253 26.253z" fill="#f63d64"></path>
+            <path class="c-04" d="M61.257 61.256V26.253L17.503 61.256h43.754zm157.514-35.003v35.003h43.754l-43.754-35.003z" fill="#f63d64"></path>
+            <path class="c-05" d="M65.632 105.01c-5.251 0-8.751 3.5-8.751 8.751s3.5 8.751 8.751 8.751 8.751-3.5 8.751-8.751c0-5.25-3.5-8.751-8.751-8.751zm148.764 0c-5.251 0-8.751 3.5-8.751 8.751s3.5 8.751 8.751 8.751 8.751-3.5 8.751-8.751c.001-5.25-3.501-8.751-8.751-8.751z" fill="#f63d64"></path>
+            <path class="c-06" d="M65.632 121.637c5.251 0 6.126 6.126 6.126 6.126 0 39.379 29.753 70.882 68.257 70.882s68.257-31.503 68.257-70.882c0 0 .875-6.126 6.126-6.126s6.126 6.126 6.126 6.126c0 46.38-35.003 83.133-80.508 83.133s-80.508-37.629-80.508-83.133c-.001-.001.874-6.126 6.124-6.126z" fill="#ed103e"></path>
+            <path class="c-07" d="M65.632 112.886c5.251 0 6.126 6.126 6.126 6.126 0 39.379 29.753 70.882 68.257 70.882s68.257-31.503 68.257-70.882c0 0 .875-6.126 6.126-6.126s6.126 6.126 6.126 6.126c0 46.38-35.003 83.133-80.508 83.133s-80.508-37.629-80.508-83.133c-.001 0 .874-6.126 6.124-6.126z" fill="#fdfbf7"></path></svg>
+        </div>
+      </div>
+      <p class="cart--continue-message">{{ 'cart.general.empty' | t }} {{ 'cart.general.continue_browsing_html' | t }}</p>
     </div>
-    <div class="no-items">
-      <div class="empty-carticon">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 280.028 280.028" width="50" height="50">
-          <path class="c-01" d="M35.004 0h210.02v78.758H35.004V0z" fill="#087532"></path>
-          <path class="c-02" d="M262.527 61.256v201.27c0 9.626-7.876 17.502-17.502 17.502H35.004c-9.626 0-17.502-7.876-17.502-17.502V61.256h245.025z" fill="#2da85c"></path>
-          <path class="c-03" d="M35.004 70.007h26.253V26.253L35.004 0v70.007zm183.767-43.754v43.754h26.253V0l-26.253 26.253z" fill="#2da85c"></path>
-          <path class="c-04" d="M61.257 61.256V26.253L17.503 61.256h43.754zm157.514-35.003v35.003h43.754l-43.754-35.003z" fill="#2da85c"></path>
-          <path class="c-05" d="M65.632 105.01c-5.251 0-8.751 3.5-8.751 8.751s3.5 8.751 8.751 8.751 8.751-3.5 8.751-8.751c0-5.25-3.5-8.751-8.751-8.751zm148.764 0c-5.251 0-8.751 3.5-8.751 8.751s3.5 8.751 8.751 8.751 8.751-3.5 8.751-8.751c.001-5.25-3.501-8.751-8.751-8.751z" fill="#2da85c"></path>
-          <path class="c-06" d="M65.632 121.637c5.251 0 6.126 6.126 6.126 6.126 0 39.379 29.753 70.882 68.257 70.882s68.257-31.503 68.257-70.882c0 0 .875-6.126 6.126-6.126s6.126 6.126 6.126 6.126c0 46.38-35.003 83.133-80.508 83.133s-80.508-37.629-80.508-83.133c-.001-.001.874-6.126 6.124-6.126z" fill="#087532"></path>
-          <path class="c-07" d="M65.632 112.886c5.251 0 6.126 6.126 6.126 6.126 0 39.379 29.753 70.882 68.257 70.882s68.257-31.503 68.257-70.882c0 0 .875-6.126 6.126-6.126s6.126 6.126 6.126 6.126c0 46.38-35.003 83.133-80.508 83.133s-80.508-37.629-80.508-83.133c-.001 0 .874-6.126 6.124-6.126z" fill="#fdfbf7"></path></svg>
-      </div>      
-    </div>
-    <p class="cart--continue-message">{{ 'cart.general.empty' | t }} {{ 'cart.general.continue_browsing_html' | t }}</p>
   </div>
-</div>
 <style>
   .cart-policy .policy .policy-icon {
     color: {{ section.settings.icon_color }};
