--- a/snippets/product-card-grid.liquid
+++ b/snippets/product-card-grid.liquid
@@ -65,14 +65,14 @@
             <div class="default-comparebutton-{{ product.handle }} loading">
               <a class="add-in-compare-js btn" data-comparehandle="{{ product.handle }}" title="{{ 'products.compare.add_to_compare' | t }}">
                 <i class="mdi mdi-cached"></i>
-                <svg class="compare-icon" version="1.0" xmlns="http://www.w3.org/2000/svg" width="120.000000pt" height="101.000000pt" viewBox="0 0 120.000000 101.000000" preserveAspectRatio="xMidYMid meet">
+                <svg class="compare-icon" xmlns="http://www.w3.org/2000/svg" width="120.000000pt" height="101.000000pt" viewBox="0 0 120.000000 101.000000" preserveAspectRatio="xMidYMid meet">
                   <g transform="translate(0.000000,101.000000) scale(0.100000,-0.100000)" stroke="none">
                     <path d="M880 500 l0 -500 155 0 155 0 0 500 0 500 -155 0 -155 0 0 -500z m220 5 l0 -405 -65 0 -65 0 0 405 0 405 65 0 65 0 0 -405z"/>
                     <path d="M440 345 l0 -345 160 0 160 0 0 345 0 345 -160 0 -160 0 0 -345z m220 5 l0 -250 -60 0 -60 0 0 250 0 250 60 0 60 0 0 -250z"/>
                     <path d="M10 190 l0 -190 155 0 155 0 -2 187 -3 188 -152 3 -153 3 0 -191z m210 0 l0 -90 -60 0 -60 0 0 90 0 90 60 0 60 0 0 -90z"/>
                   </g>
                 </svg>
-                <svg class="compare-fill" version="1.0" xmlns="http://www.w3.org/2000/svg" width="120.000000pt" height="101.000000pt" viewBox="0 0 120.000000 101.000000" preserveAspectRatio="xMidYMid meet">
+                <svg class="compare-fill" xmlns="http://www.w3.org/2000/svg" width="120.000000pt" height="101.000000pt" viewBox="0 0 120.000000 101.000000" preserveAspectRatio="xMidYMid meet">
                   <g transform="translate(0.000000,101.000000) scale(0.100000,-0.100000)" stroke="none">
                     <path d="M880 500 l0 -500 155 0 155 0 0 500 0 500 -155 0 -155 0 0 -500z"/>
                     <path d="M440 345 l0 -345 160 0 160 0 0 345 0 345 -160 0 -160 0 0 -345z"/>
@@ -156,15 +156,6 @@
         {% capture price %}{{ product.price | money }}{% endcapture %}
         {% render 'product-price-listing', product: product, show_vendor: section.settings.show_vendor %}
       </div> 
-      {% if product.available %}
-      <div class="ttqtyprogress">
-        <span class="QuantityAvailable">{{ 'products.product.available_product' | t }}</span>
-        <span class="quantity">{{ product.variants.first.inventory_quantity }}</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar"></div>
-        </div>
-      </div>
-      {% endif %}
       <div class="cart-qty">  
         {% if settings.enable_quantity %}
         {% if product.available %} 
@@ -261,7 +252,7 @@
         {% else %}
         <div class="pro_btn btn4 add_tocart soldout">
           <a class="add-cart-btn1 btn add-to-cart-disable" title="{{ 'products.product.sold_out' | t }}">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 512 512">     
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 512 512">     
               <path d="m485.7,198.5c-10.7-13.4-25.3-20.8-41.1-20.8h-36.1c-3.4-92.6-70.5-166.7-152.5-166.7-82,0-149.1,74.1-152.5,166.7h-36.1c-15.8,0-30.4,7.4-41.1,20.8-13.5,16.8-18.4,40.2-13.3,62.7l43.3,190.8c6.5,28.8 28.9,49 54.4,49h290.5c25.5,0 47.9-20.1 54.4-49l43.4-190.8c5.1-22.5 0.2-45.9-13.3-62.7zm-229.7-146.7c59.6-1.42109e-14 108.4,55.8 111.6,125.9h-223.2c3.2-70 52-125.9 111.6-125.9zm203.2,200.3l-43.3,190.9c-2.2,9.8-8.5,17.2-14.6,17.2h-290.6c-6.1,0-12.4-7.4-14.6-17.2l-43.3-190.9c-2.3-10.1-3.7-33.6 14.6-33.6h377.2c19.7,0 16.9,23.5 14.6,33.6z"/>
               <path d="m154.7,259.1c-11.3,0-20.4,9.1-20.4,20.4v127.5c0,11.3 9.1,20.4 20.4,20.4 11.3,0 20.4-9.1 20.4-20.4v-127.5c0.1-11.2-9.1-20.4-20.4-20.4z"/>
               <path d="m253.6,259.1c-11.3,0-20.4,9.1-20.4,20.4v127.5c0,11.3 9.1,20.4 20.4,20.4 11.3,0 20.4-9.1 20.4-20.4v-127.5c0-11.2-9.2-20.4-20.4-20.4z"/>
